@@ -56,3 +56,30 @@ def test_find_files():
     
     expect_dict_3 = {'file_1': [f3_1]}
     assert(find_filegroups(paths=[d1,d2], substring='file_1', extensions=['.log', '.abc']) == expect_dict_3)
+    
+    
+def test_ignore_substring():
+    master_path = os.path.join(os.path.abspath(os.getcwd()),'tests','data','find_filegroups')
+
+    d1 = os.path.join(master_path, 'dir_1')
+    d2 = os.path.join(master_path, 'dir_2')
+    d3 = os.path.join(master_path, 'dir_3')
+    
+    
+    ################################################
+    # Example 1
+    ################################################
+    # {'file_1': ['/Users/sebastian/github/mlxtend/tests/data/find_filegroups/dir_1/file_1.log', 
+    #             '/Users/sebastian/github/mlxtend/tests/data/find_filegroups/dir_3/file_1.txt', ]}
+    
+    # should ignore: 
+    #             '/Users/sebastian/github/mlxtend/tests/data/find_filegroups/dir_2/file_1.csv']}
+    
+    
+    f1_1 = os.path.join(master_path, d1, 'file_1.log')
+    f1_2 = os.path.join(master_path, d3, 'file_1.txt')
+    
+    expect_dict_1 = {'file_1': [f1_1, f1_2]}
+
+    assert(find_filegroups(paths=[d1,d2,d3], substring='file_1', ignore_substring='file_1.c') == expect_dict_1)
+    
