@@ -9,6 +9,7 @@
   shuffle one or more NumPy arrays.
 - Added shuffle and random seed parameter to stochastic gradient descent classifier.
 - Added `rstrip` parameter to `find_filegroups` to allow trimming of base names.
+- Added `ignore_substring` parameter to `find_filegroups` and `find_files`.
 
 0.2.2
 =======
